# edoras

./: README.md
conversion_tool/: CMakeLists.txt  package.xml  plugin_description.xml
conversion_tool/config/: conversion_bridge.yaml  flight_conversion_bridge.yaml  ground_conversion_bridge.yaml
conversion_tool/config/mars_rover/: rover_app_mars.perspective
conversion_tool/config/rover_husky/: rover_gui.config
conversion_tool/config/tracarm/: robot_sim_tracarm_flightsystem.perspective  tracarm.srdf
conversion_tool/include/conversion_tool/: basic_communication.h  debug_utils.h  memory_utils.h  sbn_peer.h  sbn_receiver.h
conversion_tool/launch/: flight_twist_odom_convert.launch.py  ground_conversion.launch.py  test_rover_conversion.launch.py
conversion_tool/launch/canadarm/: ground_canadarm.launch.py
conversion_tool/launch/mars_rover/: flight_mars_rover.launch.py  ground_mars_rover.launch.py
conversion_tool/launch/rover_husky/: flight_rover_demo_husky.launch.py  ground_rover_demo_husky.launch.py  husky_simulation.launch.py
conversion_tool/launch/tracarm/: flight_robot_sim_tracarm.launch.py
conversion_tool/rviz/: canadarm.rviz
conversion_tool/scripts/: canadarm_send_command.py  flight_twist_odom_convert.py  ground_twist_odom_convert.py  joint_state_convert.py  save_image_from_topic.py
conversion_tool/src/: canadarm_panel.cpp  canadarm_panel.hpp  debug_utils.cpp  drive_widget.cpp  drive_widget.hpp  flight_conversion.cpp  ground_conversion.cpp  mars_rover_panel.cpp  mars_rover_panel.hpp  sbn_receiver.cpp
conversion_tool/tools/: conversion_c_joint_states.cpp  test_conversion_tool.cpp  test_publisher.cpp
conversion_tool/urdf/tracarm/: tracarm.urdf
src/conversion_tool/: CMakeLists.txt  package.xml
src/conversion_tool/config/: conversion_bridge.yaml  conversion_bridge_flight.yaml  flight_conversion_bridge.yaml  ground_conversion_bridge_rover.yaml
src/conversion_tool/config/canadarm/: canadarm_app.perspective
src/conversion_tool/config/groundsystem/: groundsystem.perspective
src/conversion_tool/config/tracarm/: robot_sim_tracarm_groundsystem.perspective
src/conversion_tool/include/conversion_tool/: basic_communication.h  flight_conversion.h  ground_conversion.h  parser_utils.h  peer_communication.h  sbn_peer.h  types.h
src/conversion_tool/launch/: conversion.launch.py  flight_conversion.launch.py  ground_conversion.launch.py  ground_conversion_rover_multihost.launch.py  ground_twist_odom_convert.launch.py  rosbridge_websocket.launch.py  save_image_from_topic.launch.py
src/conversion_tool/launch/canadarm/: flight_canadarm.launch.py  robot_sim_canadarm.launch.py
src/conversion_tool/launch/groundsystem/: groundsystem_demo.launch.py
src/conversion_tool/launch/rover_husky/: gz_sim.launch.py
src/conversion_tool/launch/tracarm/: bringup_tracarm.launch.py  robot_sim_tracarm.launch.py
src/conversion_tool/rviz/: mars_rover.rviz
src/conversion_tool/src/: basic_communication.cpp  debug_utils.cpp  flight_conversion.cpp  flight_conversion_node.cpp  ground_conversion.cpp  ground_conversion_node.cpp  memory_utils.cpp  parser_utils.cpp  peer_communication.cpp  sbn_peer.cpp
src/conversion_tool/tools/: test_publisher.cpp  test_publisher_rover.cpp
src/conversion_tool/worlds/: empty.sdf
src/data_transfer/: CMakeLists.txt  package.xml
src/data_transfer/config/: data_transfer.yaml
src/data_transfer/include/data_transfer/: data_transfer.h
src/data_transfer/launch/: data_tranfer.launch.py  flight_data_transfer.launch.py  ground_data_transfer.launch.py
src/data_transfer/rviz/: tracarm.rviz
src/data_transfer/scripts/: canadarm_hk_joint_state_convert.py  flight_cfdp_transfer.py  ground_cfdp_transfer.py  parse_edoras_msgs.py
src/data_transfer/src/: data_transfer.cpp  data_transfer_node.cpp  parser_utils.cpp
src/data_transfer/tools/: test_publisher.cpp
src/edoras_demos/: CMakeLists.txt  README.md  package.xml
src/edoras_demos/comm_helpers/c_serialize_udp/: header_serialize_test.c  serialize_library.c
src/edoras_demos/comm_helpers/cpp_server_client/: server_1_udp.cpp
src/edoras_demos/config/dual_small_rovers/: bridge.yaml  data_transfer.yaml  flight_bridge.yaml  flight_bridge_1.yaml  flight_bridge_multihost.yaml  flight_data_transfer.yaml  ground_bridge.yaml  ground_bridge_multihost.yaml
src/edoras_demos/config/gateway/: ground_bridge.yaml  ground_bridge_multihost.yaml
src/edoras_demos/config/gateway_dual/: flight_bridge.yaml  flight_bridge_multihost.yaml
src/edoras_demos/config/rover/: ground_bridge.yaml  ground_bridge_multihost.yaml
src/edoras_demos/include/edoras_demos/: arm_comm_default.h  arm_comm_udp.h  arm_ground_command.h  rover_comm_udp.h  serialize_arm_manual.h  serialize_rover_manual.h
src/edoras_demos/launch/: mars_rover_demo.launch.py
src/edoras_demos/launch/astrobee/: astrobee_data_transfer.launch.py  astrobee_ground_demo.launch.py
src/edoras_demos/models/apollo15/: model-1_5.sdf
src/edoras_demos/robots/: rover_4wd.urdf.xacro
src/edoras_demos/rviz/: dual_small_rovers.rviz  dual_small_rovers_ground_demo.rviz  gateway_big_arm_ground_demo.rviz  gateway_dual_flight_demo.rviz  gateway_dual_ground_demo.rviz  mars_rover_demo.rviz
src/edoras_demos/src/: arm_comm_default.cpp  arm_comm_default_node.cpp  arm_comm_udp.cpp  arm_comm_udp_node.cpp  arm_ground_command.cpp  rover_comm_udp.cpp  rover_comm_udp_node.cpp  serialize_arm_manual.cpp  serialize_manual.c  serialize_rover_manual.cpp
src/edoras_demos/worlds/: rocky_surface.sdf
src/edoras_msgs/: CMakeLists.txt
src/edoras_msgs/msg/: TestMessage1.msg
src/edoras_msgs/srv/: StopStoreData.srv
src/sandbox/: CMakeLists.txt  package.xml
src/sandbox/comm_helpers/: README.md
src/sandbox/launch/: canadarm_demo.launch.py  gateway_big_arm_demo.launch.py
src/sandbox/robots/: mars_scene.urdf.xacro
src/sandbox/src/: arm_comm_udp.cpp  serialize_rover_manual.cpp  test_dynmsg_header.cpp
src/scratch/c_serialize_udp/: CMakeLists.txt  send_command_message_to_edoras_app.c  serialize_library.c  serialize_library.h  serialize_test.c  server_serialize_1.c  server_serialize_2.c
(+90 files in other folders)
