<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conversion_tool</name>
  <version>0.0.1</version>
  <description>Phase I prototyping package for ROS2->cFS messages</description>
  <maintainer email="ana@traclabs.com">Ana C. Huaman Quispe</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>edoras_msgs</depend>  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
