<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edoras_demos</name>
  <version>0.0.1</version>
  <description>Phase I prototyping package for ROS2->cFS messages</description>
  <maintainer email="ana@traclabs.com">Ana C. Huaman Quispe</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
